chore : initial setup for influencer

--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,7 @@
         <h1>Choose Your Role</h1>
         <div class="button">
             <button onclick="location.href='/sponsor/login'">Sponsor</button>
-            <button onclick="location.href='#'">Influencer</button>
+            <button onclick="location.href='{{ url_for("influencer.login") }}'">Influencer</button>
         </div>
     </div>
 </div>
