refactor : ad request status

--- a/templates/influencer_dashboard.html
+++ b/templates/influencer_dashboard.html
@@ -27,6 +27,7 @@
             <th>Start Date</th>
             <th>End Date</th>
             <th>Message</th>
+            <th>Ad Request Status</th>
             <th>Requirements</th>
             <th>Payment Amount</th>
             <th>Negotiated Amount</th>
@@ -47,6 +48,7 @@
             <td> {{ d.start_date }}  </td>
             <td> {{ d.end_date }}  </td>
             <td> {{d.messages}}</td>
+            <td>{{ d.status }}</td>
             <td>{{d.requirements}}</td>
             <td> {{d.payment_amount}}</td>
             <td> {{ d.negotiated_amount }}  </td>
