--- a/templates/sponsor_manage_adrequests.html
+++ b/templates/sponsor_manage_adrequests.html
@@ -53,6 +53,7 @@
           <th>Payment Amount</th>
           <th>Status</th>
           <th>Message</th>
+          <th>Negotiation</th>
           <th>Action</th>
         </tr>
       </thead>
