--- a/templates/influencer_dashboard.html
+++ b/templates/influencer_dashboard.html
@@ -7,10 +7,13 @@
 </head>
 <body>
 
-<label for="search_camp">Search Campaign</label>
-<input type="text" placeholder="Search campaign with keywords" id="search_camp" name="search_camp"> <br>
+<!-- <label for="search_camp">Search Campaign</label>
+<input type="text" placeholder="Search campaign with keywords" id="search_camp" name="search_camp"> <br> -->
+<button onclick="#">See All Public Campaign</button>
 <button onclick="location.href='/logout'">Log Out</button> <br>
-<p>This is the dashboard for influencers!</p>
+
+<h2>Welcome {{ session["user_name"]  }} !</h2>
+<p>Manage Ad Request</p>
 
 
 
