--- a/templates/influencer_accept.html
+++ b/templates/influencer_accept.html
@@ -4,20 +4,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Influencer Dashboard</title>
+    <title>Influencer Accept</title>
 </head>
 
 <body>
+    <div id="flash">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <div class="alert alert-danger">
+            <ul>
+                {% for message in messages %}
+                <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+        {% endif %}
+        {% endwith %}
+    </div>
+
+<!-- {{show_info}}     -->
 
     <nav>
         <button onclick="location.href='{{ url_for("influencer.show_campaign") }}'">See All Public Campaign</button>
         <button onclick="location.href='/logout'">Log Out</button> <br>
     </nav>
 
-    <form method="POST">
-        HWEWE ALL DATA WILL BE SHOWB
 
+    <table>
+        <tr>
+            <th>Campaign ID</th>
+            <td>{{show_info.campaign_id}}</td>
+        </tr>
+        <tr>
+            <th>Campaign Name</th>
+            <td>{{show_info.campaign_name}}</td>
+        </tr>
+        <tr>
+            <th>Description</th>
+            <td>{{show_info.description}} </td>
+        </tr>
+        <tr>
+            <th>Goals</th>
+            <td>{{show_info.goals}}</td>
+        </tr>
+        <tr>
+            <th>Niche</th>
+            <td>{{show_info.niche}}</td>
+        </tr>
+        <!-- <tr>
+            <th>Sponsor ID</th>
+            <td>{{show_info}}</td>
+        </tr> -->
 
-        <button type="submit">Accept</button>
+        <tr>
+            <th>Start Date</th>
+            <td>{{show_info.start_date}}</td>
+        </tr>
+        <tr>
+            <th>End Date</th>
+            <td>{{show_info.end_date}}</td>
+        </tr>
+        <!-- <tr>
+            <th>Ad Request ID</th>
+            <td>{{show_info}}</td>
+        </tr> -->
+        <!-- <tr>
+            <th>Influencer ID</th>
+            <td>{{show_info}}</td>
+        </tr> -->
+        <tr>
+            <th>Messages</th>
+            <td>{{show_info.messages}}</td>
+        </tr>
+        <tr>
+            <th>Payment Amount</th>
+            <td>{{show_info.payment_amount}}</td>
+        </tr>
+        <tr>
+            <th>Requirements</th>
+            <td>{{show_info.requirements}}</td>
+        </tr>
+        <tr>
+            <th>Status</th>
+            <td>{{show_info.status}}</td>
+        </tr>
+        <tr>
+            <th>Negotiated Amount</th>
+            <td>{{show_info.negotiated_amount}}</td>
+        </tr>
+        <tr>
+            <th>Negotiation Status</th>
+            <td>{{show_info.pending}}</td>
+        </tr>
+    </table>
+    
+    <form method="POST" action="{{ url_for('influencer.accept_adrequest', adrequest_id=show_info.ad_request_id) }}">
+        <button type="submit">Accept this Ad Request</button>
     </form>
+    
 </body>
