--- a/templates/influencer_accept.html
+++ b/templates/influencer_accept.html
@@ -94,7 +94,7 @@
         </tr>
         <tr>
             <th>Negotiation Status</th>
-            <td>{{show_info.pending}}</td>
+            <td>{{show_info.negotiation_status}}</td>
         </tr>
     </table>
     
