feat : reject the Ad request

--- a/templates/influencer_accept.html
+++ b/templates/influencer_accept.html
@@ -22,7 +22,7 @@
         {% endwith %}
     </div>
 
-{{show_info}}    
+<!-- {{show_info}}     -->
 
     <nav>
         <button onclick="location.href='/logout'">Log Out</button> <br>
