--- a/templates/sponsor_manage_adrequests.html
+++ b/templates/sponsor_manage_adrequests.html
@@ -17,7 +17,7 @@
       <button class="btn btn-danger" onclick="location.href='/logout'">Log Out</button>
       <button class="btn btn-primary" onclick="location.href='{{url_for('sponsor.sponsor_managecampaign')}}'">Manage
         Campaigns</button>
-      <button class="btn btn-secondary" onclick="location.href='#'">Search Influencers</button>
+      <button class="btn btn-secondary" onclick="location.href='{{url_for('sponsor.search_influencer')}}'">Search Influencers</button>
     </div>
   </nav>
 
