--- a/templates/sponsor_managecampaign.html
+++ b/templates/sponsor_managecampaign.html
@@ -47,7 +47,7 @@
             <button class="btn btn-danger btn-custom" onclick="location.href='/logout'">Log Out</button>
             <button class="btn btn-primary" onclick="location.href='{{ url_for('sponsor.sponsor_manageadrequest') }}'">Manage Ad Requests</button>
 
-            <button class="btn btn btn-secondary" onclick="location.href='#'">Search Influencers</button>
+            <button class="btn btn btn-secondary" onclick="location.href='{{url_for('sponsor.search_influencer')}}'">Search Influencers</button>
 
         </div>
     </nav>
