--- a/templates/sponsor_editcampaign.html
+++ b/templates/sponsor_editcampaign.html
@@ -34,7 +34,7 @@
             <button class="btn btn-primary"
                 onclick="location.href='{{ url_for('sponsor.sponsor_manageadrequest') }}'">Manage Ad Requests</button>
 
-            <button class="btn btn-secondary" onclick="location.href='#'">Search Influencers</button>
+            <button class="btn btn-secondary" onclick="location.href='{{url_for('sponsor.search_influencer')}}'">Search Influencers</button>
         </div>
     </nav>
 
