--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -32,16 +32,8 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-bar">
         <a class="navbar-brand" href="#">Admin Dashboard</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-
-                <li class="nav-item">
-                    <button class="btn btn-danger" onclick="location.href='/logout'">Log Out</button>
-                </li>
-            </ul>
+        <div class="ml-auto">
+            <button class="btn btn-danger" onclick="location.href='/logout'">Log Out</button>
         </div>
     </nav>
     <div class="container">
